tests/negative/neg_pr118d_for_of_string.safe
package neg_pr118d_for_of_string

   value : string = "Ada";
   total : integer = 0;

   for item of value
      total = total + item.length;

   print (total)
